smoke-echo/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-echo
  labels:
    app: smoke-echo
spec:
  selector:
    app: smoke-echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
