smoke-echo/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-echo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - fly-smoke-echo.vlab.digital
    secretName: fly-smoke-echo-cert
  rules:
  - host: fly-smoke-echo.vlab.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smoke-echo
            port:
              number: 80
